package edu.fiuba.algo3.app;

public class LauncherApp {

	public static void main(String[] args) {
        App.main(args);
    }
}
